--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,25 @@
+.logo{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.logo img{
+    width:30%;
+}
+
+body {
+    background: #212123;
+    font-size: 16px;
+    line-height: 16px;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    color: #fff;
+    font-weight: 500;
+    padding-bottom: 20px;
+}
+
 span{
     font-style: italic;
     font-weight: bold;
